持续优化到2s

--- a/Client/index.html
+++ b/Client/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Explore</title>
     <link rel="shortcut icon" type="image/x-icon" href="static/ico.ico">
+    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
 <!--    网页图标-->
   </head>
   <body>
